[package]
name = "xml_to_json_rs"
version = "0.1.0"
edition = "2021"
authors = [ "Marco Mengelkoch" ]
description = "Simple rust library to transform XML to json"
keywords = ["rust", "xml", "json", "serde"]
license = "MIT"
homepage = "https://github.com/marcomq/xml_to_json_rs"
repository = "https://github.com/marcomq/xml_to_json_rs"

[dependencies]
roxmltree = "0.20.0"
serde_json = "1.0.140"
